@@ -1,5 +1,5 @@
 --TEST--
-X (PCRE_EXTRA) modififer
+X (PCRE_EXTRA) modififier is ignored (no error, no change)
 --FILE--
 <?php
 
@@ -8,7 +8,8 @@ var_dump(preg_match('/\y/X', '\y'));
 
 ?>
 --EXPECTF--
-int(1)
+Warning: preg_match(): Compilation failed: unrecognized character follows \ at offset 1 in %spcre_extra.php on line 3
+bool(false)
 
 Warning: preg_match(): Compilation failed: unrecognized character follows \ at offset 1 in %spcre_extra.php on line 4
 bool(false)
