@@ -11,6 +11,7 @@ PHP                                                                        NEWS
   . Fixed bug #65547 (Default value for sunrise/sunset zenith still wrong).
     (cmb)
   . Fixed bug #69044 (discrepency between time and microtime). (krakjoe)
+
 - GD:
   . Removed deprecated image2wbmp(). (cmb)
   . Removed deprecated png2wbmp() and jpeg2wbmp(). (cmb)
@@ -26,6 +27,9 @@ PHP                                                                        NEWS
 
 - mysqlnd:
   . Fixed #60594 (mysqlnd exposes 160 lines of stats in phpinfo). (PeeHaa)
+
+- PCRE:
+  . Don't ignore invalid escape sequences. (sjon)
 
 - PDO:
   . Fixed bug #77849 (Disable cloning of PDO handle/connection objects).
